Adds sass support

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+
+    <link rel="stylesheet" href="maju.css">
+    <link rel="stylesheet" href="node_modules/bulma-calendar/dist/css/bulma-calendar.min">
     <link rel="stylesheet" href="node_modules/bulma/css/bulma.css">
     <title>React App</title>
   </head>
