--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="maju.css">
     <link rel="stylesheet" href="node_modules/bulma-calendar/dist/css/bulma-calendar.min">
     <link rel="stylesheet" href="node_modules/bulma/css/bulma.css">
+    <script src="~bulma-calendar/dist/js/bulma-calendar.min.js"></script>
     <title>React App</title>
   </head>
   <body>
